--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "gatsby": "^2.15.17",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
