--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gatsby": "^2.15.17",
+    "gatsby-plugin-sass": "^2.1.14",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-icons": "^3.7.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
