--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.15.17",
+    "gatsby-image": "^2.2.23",
     "gatsby-plugin-sass": "^2.1.14",
+    "gatsby-plugin-sharp": "^2.2.27",
     "gatsby-plugin-styled-components": "^3.1.6",
+    "gatsby-source-filesystem": "^2.1.28",
+    "gatsby-transformer-sharp": "^2.2.19",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
