--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "gatsby-plugin-sass": "^2.1.14",
     "gatsby-plugin-sharp": "^2.2.27",
     "gatsby-plugin-styled-components": "^3.1.6",
+    "gatsby-plugin-transition-link": "^1.13.0",
     "gatsby-source-filesystem": "^2.1.28",
     "gatsby-transformer-sharp": "^2.2.19",
+    "gsap": "^2.1.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
