--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.3.1",
+    "dotenv": "^8.1.0",
     "gatsby": "^2.15.17",
     "gatsby-background-image": "^0.8.15",
     "gatsby-image": "^2.2.23",
+    "gatsby-plugin-playground": "^1.0.6",
     "gatsby-plugin-sass": "^2.1.14",
     "gatsby-plugin-sharp": "^2.2.27",
     "gatsby-plugin-styled-components": "^3.1.6",
     "gatsby-plugin-transition-link": "^1.13.0",
+    "gatsby-source-contentful": "^2.1.45",
     "gatsby-source-filesystem": "^2.1.28",
     "gatsby-transformer-sharp": "^2.2.19",
     "gsap": "^2.1.3",
